force-app/main/default/objects/Assignment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Assignment Due Date</description>
    <inlineHelpText>Assignment Due Date</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>