force-app/main/default/objects/Assignment__c/fields/Next_Steps_History__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_History__c</fullName>
    <description>Summary of all next steps recorded for this assignment.</description>
    <label>Next Steps History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>