force-app/main/default/objects/Assignment__c/validationRules/Require_Completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Completed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Completed&quot;) &amp;&amp;
ISBLANK(Completed_Date__c)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Fill in the Completed Date</errorMessage>
</ValidationRule>