force-app/main/default/objects/Assignment__c/validationRules/Require_Status_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Status_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNULL(Completed_Date__c)) &amp;&amp;
NOT(ISPICKVAL(Status__c, &quot;Completed&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Change the Status to Completed</errorMessage>
</ValidationRule>