force-app/main/default/objects/Assignment__c/listViews/All_Cancelled.listView-meta.xml
<ListView>
    <fullName>All_Cancelled</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>All-Cancelled</label>
</ListView>