force-app/main/default/objects/Assignment__c/listViews/All_Complete.listView-meta.xml
<ListView>
    <fullName>All_Complete</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All-Complete</label>
</ListView>