force-app/main/default/objects/Assignment__c/listViews/All_New_OnHold.listView-meta.xml
<ListView>
    <fullName>All_New_OnHold</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,On Hold</value>
    </filters>
    <label>All-New &amp; On Hold</label>
</ListView>