force-app/main/default/objects/Assignment__c/listViews/All_Overdue.listView-meta.xml
<ListView>
    <fullName>All_Overdue</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,On Hold</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All-Overdue</label>
</ListView>