force-app/main/default/objects/Assignment__c/listViews/All_Team.listView-meta.xml
<ListView>
    <fullName>All_Team</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Initiative__c</field>
        <operation>notEqual</operation>
        <value>Project Management</value>
    </filters>
    <label>All-Team</label>
</ListView>