force-app/main/default/objects/Assignment__c/listViews/Data_Model.listView-meta.xml
<ListView>
    <fullName>Data_Model</fullName>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Initiative__c</field>
        <operation>equals</operation>
        <value>Provide PwC with Data Model</value>
    </filters>
    <label>1. Data Model</label>
</ListView>