force-app/main/default/objects/Assignment__c/listViews/My_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Assignments</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Assignments</label>
</ListView>