force-app/main/default/objects/Assignment__c/listViews/Project_Management.listView-meta.xml
<ListView>
    <fullName>Project_Management</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Initiative__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Initiative__c</field>
        <operation>equals</operation>
        <value>Project Management</value>
    </filters>
    <label>Project Management</label>
</ListView>