force-app/main/default/objects/Assignment__c/listViews/System_Integration_Testing_SIT.listView-meta.xml
<ListView>
    <fullName>System_Integration_Testing_SIT</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Initiative__c</field>
        <operation>equals</operation>
        <value>System Integration Testing</value>
    </filters>
    <label>2. System Integration Testing (SIT)</label>
</ListView>